--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -3,7 +3,6 @@ $url_Sans: "../font/font.css";
 $UTM: "UTM";
 $url_UTM: "../font/UTM_BryantLG.ttf";
 $button_color: #b2d235;
-
 @mixin font_face($font_family, $font_url) {
   @font-face {
     font-family: #{$font_family};
@@ -19,8 +18,8 @@ $button_color: #b2d235;
   background-color: $color;
 }
 
-@include font_face($UTM, $url_UTM);
-
+@include font_face($UTM,
+$url_UTM);
 @font-face {
   font-family: main-font;
   src: url("../font/UTM_BryantLG.ttf");
