--- a/scss/_variable.scss
+++ b/scss/_variable.scss
@@ -3,14 +3,14 @@ $url_Sans: "../font/font.css";
 $UTM: "UTM";
 $url_UTM: "../font/UTM_BryantLG.ttf";
 $button_color: #b2d235;
-@mixin font_face($font_family, $font_url) {
+@mixin font_Face($font_family, $font_url) {
   @font-face {
     font-family: #{$font_family};
     src: url("#{$font_url}");
   }
 }
 
-@mixin cover_image($color) {
+@mixin cover_Image($color) {
   width: auto;
   height: auto;
   object-fit: contain;
@@ -18,14 +18,13 @@ $button_color: #b2d235;
   background-color: $color;
 }
 
-@include font_face($UTM,
-$url_UTM);
+@include font_Face($UTM, $url_UTM);
 @font-face {
   font-family: main-font;
   src: url("../font/UTM_BryantLG.ttf");
 }
 
-@keyframes slide_show {
+@keyframes slide_Show {
   from {
     opacity: 0;
   }
@@ -34,13 +33,13 @@ $url_UTM);
   }
 }
 
-.fix_hover {
+.fix-hover {
   text-decoration: none;
   background-color: $button_color;
   color: white;
 }
 
-@mixin text_shadow($value) {
+@mixin text_Shadow($value) {
   -webkit-text-stroke-width: $value;
 }
 
