--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,7 +3,7 @@
   .navbar-nav {
     .nav-item {
       font: normal bold 14px/19px Open Sans;
-      @include text-Shadow(0.3px);
+      @include text_Shadow(0.3px);
       &:hover {
         background-color: $button_color;
         border-radius: 15px;
@@ -12,5 +12,4 @@
     }
   }
 }
-
 @import "responsive";
