--- a/scss/style.scss
+++ b/scss/style.scss
@@ -192,4 +192,187 @@
   }
 }
 
+.hapo-wrap-inf {
+  background: url("../image/background_inf.png");
+  background-size: cover;
+  position: relative;
+
+  .hapo-inf-left {
+    position: absolute;
+    top: -222px;
+  }
+
+  .hapo-inf_two {
+    width: auto;
+    height: auto;
+    object-fit: contain;
+  }
+
+  .hapo-content-heading {
+    color: white;
+    font: normal bold 70px/86px UTM;
+    margin-bottom: 20px;
+    position: relative;
+    top: 150px;
+  }
+
+  .container {
+    padding: 180px 0;
+  }
+
+  li {
+    margin: 10px 0 10px 30px;
+    color: white;
+    font: 20px/25px UTM;
+  }
+}
+
+.hapo-wrap-feedback {
+  padding-top: 104px;
+
+  .hapo-wrap-feedback-heading {
+    .hapo-feedback-heading {
+      border-bottom: 5px solid $button_color;
+      text-align: center;
+      @extend .heading-main;
+    }
+  }
+
+  .hapo-feedback-det {
+    text-align: center;
+    font: 25px/31px UTM;
+    color: #505353;
+    margin: 23px auto 40px auto;
+    text-shadow: 0.1px 0.1px 0.01px;
+  }
+}
+
+/* feedback */
+
+.hapo-wrap-feedback-users {
+  height: 200px;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+
+  .hapo-feedback-user {
+    .hapo-wrap-feedback-content {
+      height: 163.47px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-bottom: 20px;
+      text-align: center;
+      border: 0.5px solid #e2e2e2;
+      box-sizing: border-box;
+      border-radius: 10px;
+      position: relative;
+      padding: 0 15px;
+    }
+
+    .hapo-feedback-user-content {
+      width: 92%;
+      height: 89px;
+      font: 16px/20px UTM;
+      letter-spacing: -0.05em;
+      border-left: 7px solid #d9dadc;
+      padding: 10px;
+      @include textShadow(0.3px);
+    }
+  }
+}
+
+.hapo-feedback-user {
+  .hapo-message {
+    display: flex;
+    align-items: center;
+    padding: 0 20px;
+
+    .hapo-user-inf {
+      margin-left: 10px;
+
+      .hapo-userN,
+      .hapo-coursesN,
+      .hapo-like {
+        text-shadow: 0.1px 0.1px;
+        display: flex;
+        align-items: center;
+        margin: 3px auto;
+      }
+
+      .hapo-userN {
+        color: #11114e;
+      }
+
+      .hapo-coursesN {
+        color: #505353;
+      }
+    }
+  }
+
+  .tooltip-cus {
+    position: absolute;
+    width: 17px;
+    height: 17px;
+    background: #ffffff;
+    border-top: 0.5px solid #e2e2e2;
+    border-left: 0.5px solid #e2e2e2;
+    box-sizing: border-box;
+    transform: rotate(-135deg);
+    bottom: -9px;
+    left: 19px;
+  }
+}
+
+.hapo-wrap-feedback-users {
+  position: relative;
+}
+
+.hapo-wrap-slider {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  visibility: hidden;
+  animation-duration: 2s;
+  margin: auto 0;
+  left: 0;
+}
+
+.hapo-left-right {
+  position: absolute;
+  margin-top: 65px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+
+  .left_icon,
+  .right_icon {
+    cursor: pointer;
+    &:hover {
+      transform: scale(1.05);
+    }
+  }
+}
+
+.hapo-wrap-learn {
+  padding: 10% 0;
+  margin-top: 110px;
+  background: url(../image/background7.png) no-repeat center;
+  background-size: cover;
+
+  .hapo-content-learn {
+    width: 705px;
+    margin: auto;
+
+    .hapo-learn-heading {
+      width: 705px;
+      height: 158px;
+      font: normal bold 60px/74px UTM;
+      text-align: center;
+      letter-spacing: -0.02em;
+      color: #ffffff;
+    }
+  }
+}
+
 @import "responsive";
