--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -99,6 +99,22 @@
     }
   }
 
+  .hapo-wrap-learn {
+    .hapo-content-learn {
+      .hapo-learn-heading {
+        font: normal bold 35px/43px UTM;
+      }
+    }
+  }
+
+  .hapo-content-learn {
+    .hapo-button-learn {
+      .hapo-learn-link {
+        font: normal bold 20px/25px UTM;
+      }
+    }
+  }
+
   .hapo-wrap-feedback {
     .hapo-wrap-feedback-heading {
       .hapo-feedback-heading {
@@ -108,6 +124,22 @@
 
     .hapo-feedback-det {
       font: 18px/22px UTM;
+    }
+  }
+
+  .hapo-wrap-statistic {
+    .hapo-feedback-heading {
+      font: bold 50px/61px UTM;
+    }
+  }
+
+  .hapo-static-data {
+    .hapo-statistic-name {
+      font: bold 40px/49px UTM;
+    }
+
+    .hapo-statistic-data {
+      font: bold 40px/49px UTM;
     }
   }
 }
@@ -200,6 +232,28 @@
       .hapo-feedback-heading {
         font: bold 40px/49px UTM;
       }
+    }
+  }
+
+  .hapo-wrap-learn {
+    .hapo-content-learn {
+      .hapo-learn-heading {
+        font: normal bold 23px/28px UTM;
+      }
+    }
+  }
+
+  .hapo-content-learn {
+    .hapo-button-learn {
+      .hapo-learn-link {
+        font: normal bold 18px/22px UTM;
+      }
+    }
+  }
+
+  .hapo-wrap-statistic {
+    .hapo-feedback-heading {
+      font: bold 40px/49px UTM;
     }
   }
 }
