--- a/scss/style.scss
+++ b/scss/style.scss
@@ -459,4 +459,80 @@
   }
 }
 
+.text-mes {
+  font: normal 600 12px/16px Open Sans;
+  letter-spacing: -0.02em;
+  color: #7f7f7f;
+}
+
+.hapo-fixed {
+  position: fixed;
+  right: 20px;
+  bottom: 90px;
+
+  .hapo-wrap-content-mes {
+    background-color: white;
+    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25);
+    border-radius: 23px;
+    display: none;
+
+    .hapo-user {
+      padding: 2px 6px 0 60px;
+      @extend .text-mes;
+    }
+
+    .det-message {
+      @extend .text-mes;
+    }
+  }
+}
+
+.hapo-close {
+  margin-left: 200px;
+  cursor: pointer;
+  &:hover {
+    opacity: 0.6;
+  }
+}
+
+.hapo-wrap-message-content {
+  .hapo-user-image {
+    height: 30px;
+  }
+
+  .hapo-message-content {
+    background: #f1f0f0;
+    border-radius: 15px;
+    font: bold 12px/17px Open Sans;
+    letter-spacing: -0.02em;
+    color: #505353;
+  }
+}
+
+.hapo-button-message {
+  .hapo-button-message-link {
+    line-height: 37px;
+    font: 12px/16px Open Sans;
+    color: white;
+    background: #3184f7;
+    border-radius: 10px;
+    color: white;
+    &:hover {
+      opacity: 0.8;
+      text-decoration: none;
+    }
+  }
+}
+
+.hapo-wrap-icon {
+  cursor: pointer;
+  position: absolute;
+  right: 0;
+  bottom: -66px;
+  background-color: #2774df;
+  &:hover {
+    transform: scale(1.05);
+  }
+}
+
 @import "responsive";
