--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 @import "variable";
 
-.container {
+.container-fluid {
   .navbar-nav {
     .nav-item {
       font: normal bold 14px/19px Open Sans;
