--- a/scss/style.scss
+++ b/scss/style.scss
@@ -202,10 +202,10 @@
     top: -222px;
   }
 
-  .hapo-inf_two {
-    width: auto;
-    height: auto;
-    object-fit: contain;
+  .hapo-inf-right {
+    transform: scale(1.2);
+    position: relative;
+    top: -40px;
   }
 
   .hapo-content-heading {
