--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,10 @@ ul {
     background-color: #b2d235;
     border-radius: 15px;
     color: white; }
+.container-fluid .navbar-toggler:focus {
+  border-radius: 50%;
+  background-color: #cccaca;
+  outline: none; }
 
 .navbar-nav a.text-dark.nav_item :hover {
   background-color: #b2d235;
@@ -249,7 +253,9 @@ ul {
             box-sizing: border-box;
     border-radius: 10px;
     position: relative;
-    padding: 0 15px; }
+    padding: 0 15px;
+    -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+            box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25); }
   .hapo-wrap-feedback-users .hapo-feedback-user .hapo-feedback-user-content {
     width: 92%;
     height: 89px;
@@ -552,9 +558,12 @@ ul {
     width: 40px;
     height: 40px; } }
 @media only screen and (max-width: 425px) {
-  .container .navbar-nav .nav-item {
+  .container-fluid .fix-icon {
+    width: 30px;
+    height: 30px; }
+  .container-fluid .navbar-nav .nav-item {
     color: #505353; }
-    .container .navbar-nav .nav-item:hover {
+    .container-fluid .navbar-nav .nav-item:hover {
       background-color: white;
       color: #b2d235; }
 
@@ -629,4 +638,5 @@ ul {
       .hapo-wrap-contact .hapo-face-link img {
         width: 30px;
         height: 30px; } }
+
 /*# sourceMappingURL=style.css.map */
