--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,6 +13,12 @@
       }
     }
   }
+
+  .navbar-toggler:focus {
+    border-radius: 50%;
+    background-color: rgb(204, 202, 202);
+    outline: none;
+  }
 }
 
 .navbar-nav {
@@ -268,6 +274,7 @@
       border-radius: 10px;
       position: relative;
       padding: 0 15px;
+      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
     }
 
     .hapo-feedback-user-content {
