--- a/scss/style.scss
+++ b/scss/style.scss
@@ -274,7 +274,7 @@
       border-radius: 10px;
       position: relative;
       padding: 0 15px;
-      box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
+      box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
     }
 
     .hapo-feedback-user-content {
