--- a/css/style.css
+++ b/css/style.css
@@ -254,8 +254,8 @@ ul {
     border-radius: 10px;
     position: relative;
     padding: 0 15px;
-    -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
-            box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25); }
+    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
+            box-shadow: 0 0 6px rgba(0, 0, 0, 0.25); }
   .hapo-wrap-feedback-users .hapo-feedback-user .hapo-feedback-user-content {
     width: 92%;
     height: 89px;
