--- a/scss/style.scss
+++ b/scss/style.scss
@@ -148,6 +148,7 @@
       border-radius: 22px;
       letter-spacing: 0.06rem;
       background-color: $button_color;
+      font-family: UTM;
       @include textShadow(1px);
       &:hover {
         opacity: 0.8;
@@ -219,17 +220,22 @@
     font: normal bold 70px/86px UTM;
     margin-bottom: 20px;
     position: relative;
-    top: 150px;
+    top: 180px;
   }
 
   .container {
-    padding: 180px 0;
+    padding: 90px 0;
   }
 
-  li {
-    margin: 10px 0 10px 30px;
-    color: white;
-    font: 20px/25px UTM;
+  ul {
+    position: relative;
+    top: 30px;
+
+    li {
+      margin: 10px 0 10px 30px;
+      color: white;
+      font: 20px/25px UTM;
+    }
   }
 }
 
@@ -371,7 +377,6 @@
     .hapo-learn-heading {
       font: normal bold 60px/74px UTM;
       text-align: center;
-      letter-spacing: -0.02em;
       color: #ffffff;
     }
   }
@@ -385,6 +390,7 @@
       color: $button_color;
       font: normal bold 30px/70px UTM;
       letter-spacing: -0.05em;
+      -webkit-text-stroke-width: 0;
     }
   }
 }
