--- a/scss/style.scss
+++ b/scss/style.scss
@@ -273,7 +273,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      margin-bottom: 20px;
+      margin-bottom: 15px;
       text-align: center;
       border: 0.5px solid #e2e2e2;
       box-sizing: border-box;
@@ -284,8 +284,8 @@
     }
 
     .hapo-feedback-user-content {
-      width: 92%;
-      height: 89px;
+      width: 97%;
+      height: 100px;
       font: 16px/20px UTM;
       letter-spacing: -0.05em;
       border-left: 7px solid #d9dadc;
@@ -344,17 +344,16 @@
 .hapo-wrap-slider {
   width: 100%;
   display: flex;
-  position: absolute;
-  visibility: hidden;
-  animation-duration: 2s;
-  margin: auto 0;
-  left: 0;
+  // position: absolute;
+  // animation-duration: 2s;
+  // margin: auto 0;
+  // left: 0;
 }
 
 .hapo-left-right {
   position: absolute;
-  margin-top: 65px;
-  width: 100%;
+  margin-top: 70px;
+  width: 94%;
   display: flex;
   justify-content: space-between;
 
