--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -81,6 +81,7 @@
       padding: 80px 0;
 
       .hapo-content-heading {
+        padding-left: 70px;
         top: -35px;
         display: block;
         text-align: center;
@@ -108,6 +109,12 @@
       transform: scale(1.2);
       top: 0;
       right: 22px;
+    }
+  }
+
+  .hapo-row-four {
+    .hapo-all-course {
+      font: bold 28px/34px UTM;
     }
   }
 
@@ -187,6 +194,10 @@
         height: 40px;
       }
     }
+  }
+
+  .hapo-left-right {
+    width: 90%;
   }
 }
 
@@ -272,6 +283,7 @@
       padding: 50px 0;
 
       .hapo-content-heading {
+        padding-left: 30px;
         top: 15px;
         font: normal bold 40px/40px UTM;
       }
@@ -348,6 +360,18 @@
       img {
         width: 30px;
         height: 30px;
+      }
+    }
+  }
+
+  .hapo-left-right {
+    width: 84%;
+  }
+
+  .hapo-wrap-feedback-users {
+    .hapo-feedback-user {
+      .hapo-feedback-user-content {
+        padding: 0 10px;
       }
     }
   }
